<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, TacActivity!</string>
    <string name="app_name">Traditional Archery Scoreboard</string>
    <string name="user_manager">Usermanager</string>
    <string name="start">Start</string>
    <string name="history">History</string>
    <string name="searchUser">search</string>
    <string name="addUser">add user</string>
    <string name="username">Username</string>
    <string name="mail">Mail</string>
    <string name="color">Color</string>
    <string name="pick_color">pick</string>
    <string name="cancel">Cancel</string>
    <string name="save">save</string>
    <string name="statistic_end">statistic/end</string>
    <string name="reorder">reorder</string>
    <string name="close">close</string>
    <string name="start_stop_edit_mode">enter / leave edit mode</string>
    <string name="take_picture">take picture</string>
    <string name="menu_create_new_version">Create new version</string>
    <string name="addEditUserDefaultText"></string>
    <string name="required">Required</string>
    <string name="empty_or_valid">must be empty or valid!</string>
    <string name="search_input_hint">Search Parcour- or username</string>
    <string name="import_db">Import Database from SD</string>
    <string name="export_db">Export Database to SD</string>
    <string name="share_mail">Mail</string>
    <string name="share_title">Share this visit!</string>
    <string name="share_server">TAS Server</string>
    <string name="share_quit">Return</string>
    <string name="share_description">You can always share it later in the \"History\" menu.</string>
    <string name="parcour_name">parcour name</string>
    <string name="settings">Settings</string>
</resources>