<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="5dip">





    <TextView
      android:id="@+id/textView1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/share_title"
      android:textAppearance="?android:attr/textAppearanceLarge"
      android:textStyle="bold" />




    <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="20dip"
      android:text="@string/share_description"
      android:textAppearance="?android:attr/textAppearanceSmall" />


    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"  >
      
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >




            <Button
                android:background="@drawable/button_background"
                android:id="@+id/btnShareMail"
                android:layout_marginLeft="30dip"
                android:layout_marginRight="30dip"
                android:layout_marginBottom="30dip"
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_weight="0.80"
                android:text="@string/share_mail" />






            <Button
              android:background="@drawable/button_background"
              android:id="@+id/btnShareServer"
              android:layout_marginLeft="30dip"
              android:layout_marginRight="30dip"            
              android:layout_width="fill_parent"              
              android:layout_height="80dp"
              android:layout_weight="0.80"
              android:layout_gravity="center"
              android:text="@string/share_server" />

        </LinearLayout>
    </ScrollView>





    <Button
      android:background="@drawable/button_background"
      android:id="@+id/btnShareQuit"
      android:layout_width="fill_parent"
      android:layout_height="50dip"
      android:layout_gravity="center"
      android:text="@string/share_quit" />

</LinearLayout>