<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
		
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/username"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
		
	    <EditText
	        android:id="@+id/txtUsername"
	        android:layout_width="match_parent"
	        android:inputType="text"
	        android:layout_height="wrap_content" >
			
	        <requestFocus />
	    </EditText>
		
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/mail"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
		
	    <EditText
	        android:id="@+id/txtMail"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textEmailAddress" />
		
	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/color"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	
	    <LinearLayout
	        android:id="@+id/linearLayout1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >

	        <ImageButton
	            android:id="@+id/btnPicker"
	            android:layout_width="50dip"
	            android:layout_height="50dip"
              android:scaleType="centerInside"
              android:background="@drawable/button_background"
              android:src="@drawable/colorwheel"
	            android:text="@string/pick_color" />
	
	        <View
	            android:id="@+id/dummyview_col"
	            android:layout_width="0dip"
	            android:layout_height="50dip"
	            android:layout_margin="2dip"
	            android:layout_gravity="center_vertical"
	            android:layout_weight="1.0"/>
	
	    </LinearLayout>

	    <LinearLayout
	        android:id="@+id/linearLayout2"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent" >

	        <ImageButton
	            android:id="@+id/btnCancelUser"
	            android:layout_width="wrap_content"
	            android:layout_height="50dip"
              android:scaleType="centerInside"
	            android:layout_weight="0.5"
              android:src="@drawable/cancel48"
              android:background="@drawable/button_background"
              android:text="@string/cancel" />
              
	        <ImageButton
	            android:id="@+id/btnSaveUser"
	            android:layout_width="wrap_content"
	            android:layout_height="50dip"
              android:scaleType="centerInside"
              android:src="@drawable/save48"
              android:background="@drawable/button_background"              
	            android:layout_weight="0.5"
              android:text="@string/save" android:layout_gravity="right"/>

	    </LinearLayout>
	    
	</LinearLayout>
</ScrollView>